2007-03-23  Uwe Kindler  <uwe_kindler@web.de>

    * cdl/can_loop.cd: Changed naming of various options from 
      xxx_IO_CAN_LOOP into xxx_DEVS_CAN_LOOP

2007-03-23  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/can_loop.cdl: Driver now implements the interfaces
	  CYGINT_IO_CAN_TX_EVENTS, CYGINT_IO_CAN_STD_CAN_ID, 
	  CYGINT_IO_CAN_EXT_CAN_ID.
	  Removed CYGPKG_IO_CAN_LOOP_CFLAGS_ADD and 
	  CYGPKG_IO_CAN_LOOP_CFLAGS_REMOVE because they had no function.
	  
	* src/loop_can.c: Added missing function loop_can_get_config
	  to make the driver build properly.
	
	* tests: Did some fixes and cleanups for all test cases to make them
	  work properly with the changes in the CAN I/O layer.
	
2005-08-15  Uwe Kindler  <uwe_kindler@web.de>

	* Loopback CAN driver created

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not